drivers and HAL: support for AVRs, SAM and RP2040

--- a/.gitignore
+++ b/.gitignore
@@ -51,5 +51,12 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
-# documentation
-docs/*
+# Emacs backups files
+*~
+
+# uncrustify backup files
+*.uncrustify
+
+# html and js files
+*.html
+*.js
