--- a/etc/uncrustify.cfg
+++ b/etc/uncrustify.cfg
@@ -71,7 +71,7 @@ sp_func_proto_paren	= remove	# "int foo ();" vs "int foo();"
 # Aligning stuff
 #
 
-align_with_tabs		= TRUE		# use tabs to align
+align_with_tabs		= FALSE		# use tabs to align
 align_on_tabstop	= TRUE 		# align on tabstops
 # align_keep_tabs		= true
 align_enum_equ_span		= 4		# '=' in enum definition
