--- a/devices/raspberry/rp2040/Makefile-SMP.in
+++ b/devices/raspberry/rp2040/Makefile-SMP.in
@@ -1,6 +1,6 @@
 # Device configuration file for Raspberry RP2040 SMP
 ARCH_DIR := $(PICORTOS_DIR)/arch/arm/cm0+
-ARCH_SMP_DIR := $(PICORTOS_DIR)/arch/arm/cm0+/rp2040
+ARCH_SMP_DIR := $(ARCH_DIR)/rp2040
 DEVICE_DIR := $(PICORTOS_DIR)/devices/raspberry/rp2040
 
 DEFINE := -D__RP2040__
@@ -13,4 +13,4 @@ SRC_C += $(ARCH_DIR)/picoRTOS_port.c
 SRC_C += $(ARCH_SMP_DIR)/picoRTOS-SMP_port.c
 
 SRC_S := $(ARCH_DIR)/picoRTOS_portasm.S
-SRC_S := $(ARCH_SMP_DIR)/picoRTOS-SMP_portasm.S
+SRC_S += $(ARCH_SMP_DIR)/picoRTOS-SMP_portasm.S
