static analysis: added support for cppcheck

--- a/test/static_analysis/picoRTOS-SMP/Makefile
+++ b/test/static_analysis/picoRTOS-SMP/Makefile
@@ -3,8 +3,13 @@ PICORTOS_DIR := $(abspath ../../..)
 CHECK += arch/arm/cm0+/rp2040
 
 SPLINT := splint
-SPLINTFLAGS := -checks -I. -unixlib -I$(PICORTOS_DIR)
+SPLINTFLAGS := -checks -unixlib -I. -I$(PICORTOS_DIR)
 SPLINTFLAGS += -I$(PICORTOS_DIR)/arch/include
+
+CPPCHECK := cppcheck
+CPPCHECKFLAGS := --enable=all -DNDEBUG -I. -I$(PICORTOS_DIR)
+CPPCHECKFLAGS += -I$(PICORTOS_DIR)/arch/include
+CPPCHECKFLAGS += --suppress=missingIncludeSystem
 
 SRC += $(PICORTOS_DIR)/picoRTOS-SMP.c
 SRC += $(PICORTOS_DIR)/ipc/picoRTOS_futex.c
@@ -13,10 +18,16 @@ SRC += $(PICORTOS_DIR)/ipc/picoRTOS_cond.c
 SRC += $(PICORTOS_DIR)/ipc/picoRTOS_queue.c
 SRC += test.c
 
-all: $(CHECK)
+splint: SA := $(SPLINT)
+splint: SAFLAGS := $(SPLINTFLAGS)
+splint: $(CHECK)
+
+cppcheck: SA := $(CPPCHECK)
+cppcheck: SAFLAGS := $(CPPCHECKFLAGS)
+cppcheck: $(CHECK)
 
 arch/%:
-	$(SPLINT) $(SPLINTFLAGS) $(SRC) \
+	$(SA) $(SAFLAGS) $(SRC) \
 	  -I$(PICORTOS_DIR)/$@ \
 	  -I$(PICORTOS_DIR)/$@/samples \
 	  $(PICORTOS_DIR)/$@/picoRTOS_port.c \
@@ -24,9 +35,11 @@ arch/%:
 
 # special case unfortunately
 arch/arm/cm0+/rp2040:
-	$(SPLINT) $(SPLINTFLAGS) $(SRC) \
+	$(SA) $(SAFLAGS) $(SRC) \
 	  -I$(PICORTOS_DIR)/$@ \
 	  -I$(PICORTOS_DIR)/$@/.. \
 	  -I$(PICORTOS_DIR)/$@/samples \
 	  $(PICORTOS_DIR)/$@/../picoRTOS_port.c \
 	  $(PICORTOS_DIR)/$@/picoRTOS-SMP_port.c
+
+.PHONY: splint cppcheck
