--- a/test/static_analysis/picoRTOS/Makefile
+++ b/test/static_analysis/picoRTOS/Makefile
@@ -9,6 +9,11 @@ SPLINT := splint
 SPLINTFLAGS := -checks -unixlib -I. -I$(PICORTOS_DIR)
 SPLINTFLAGS += -I$(PICORTOS_DIR)/arch/include
 
+CPPCHECK := cppcheck
+CPPCHECKFLAGS := --enable=all -DNDEBUG -I. -I$(PICORTOS_DIR)
+CPPCHECKFLAGS += -I$(PICORTOS_DIR)/arch/include
+CPPCHECKFLAGS += --suppress=missingIncludeSystem
+
 SRC += $(PICORTOS_DIR)/picoRTOS.c
 SRC += $(PICORTOS_DIR)/ipc/picoRTOS_futex.c
 SRC += $(PICORTOS_DIR)/ipc/picoRTOS_mutex.c
@@ -16,10 +21,16 @@ SRC += $(PICORTOS_DIR)/ipc/picoRTOS_cond.c
 SRC += $(PICORTOS_DIR)/ipc/picoRTOS_queue.c
 SRC += test.c
 
-all: $(CHECK)
+splint: SA := $(SPLINT)
+splint: SAFLAGS := $(SPLINTFLAGS)
+splint: $(CHECK)
+
+cppcheck: SA := $(CPPCHECK)
+cppcheck: SAFLAGS := $(CPPCHECKFLAGS)
+cppcheck: $(CHECK)
 
 arch/%:
-	$(SPLINT) $(SPLINTFLAGS) $(SRC) \
+	$(SA) $(SAFLAGS) $(SRC) \
 	  -I$(PICORTOS_DIR)/$@ \
 	  -I$(PICORTOS_DIR)/$@/samples \
 	  $(PICORTOS_DIR)/$@/picoRTOS_port.c
