test: added tinyAVR 1-series to static analysis

--- a/test/static_analysis/picoRTOS/Makefile
+++ b/test/static_analysis/picoRTOS/Makefile
@@ -4,6 +4,7 @@ CHECK += arch/arm/cm0+
 CHECK += arch/arm/cm3
 CHECK += arch/avr/avr5
 CHECK += arch/avr/avr6
+CHECK += arch/avr/avrxmega3
 
 SPLINT := splint
 SPLINTFLAGS := -checks -unixlib -I. -I$(PICORTOS_DIR)
