--- a/demo/curiosity-2.0-pic32mz-ef/Makefile
+++ b/demo/curiosity-2.0-pic32mz-ef/Makefile
@@ -14,22 +14,28 @@ SRC_C += $(PICORTOS_DIR)/ipc/picoRTOS_cond.c
 
 # Drivers
 INCLUDE += -I$(PICORTOS_DIR)/drivers/include
+INCLUDE += -I$(PICORTOS_DIR)/drivers/adc
+INCLUDE += -I$(PICORTOS_DIR)/drivers/can
 INCLUDE += -I$(PICORTOS_DIR)/drivers/clock
 INCLUDE += -I$(PICORTOS_DIR)/drivers/gpio
 INCLUDE += -I$(PICORTOS_DIR)/drivers/misc
 INCLUDE += -I$(PICORTOS_DIR)/drivers/mux
 INCLUDE += -I$(PICORTOS_DIR)/drivers/pwm
 INCLUDE += -I$(PICORTOS_DIR)/drivers/spi
+INCLUDE += -I$(PICORTOS_DIR)/drivers/twi
 INCLUDE += -I$(PICORTOS_DIR)/drivers/uart
 INCLUDE += -I$(PICORTOS_DIR)/drivers/wd
 
 # Drivers
+SRC_C += $(PICORTOS_DIR)/drivers/adc/adc-pic32mx.c
+SRC_C += $(PICORTOS_DIR)/drivers/can/can-pic32mx.c
 SRC_C += $(PICORTOS_DIR)/drivers/clock/clock-pic32mx.c
 SRC_C += $(PICORTOS_DIR)/drivers/gpio/gpio-pic32mx.c
 SRC_C += $(PICORTOS_DIR)/drivers/misc/misc-pic32mx.c
 SRC_C += $(PICORTOS_DIR)/drivers/mux/mux-pic32mx.c
 SRC_C += $(PICORTOS_DIR)/drivers/pwm/pwm-pic32mx.c
 SRC_C += $(PICORTOS_DIR)/drivers/spi/spi-pic32mx.c
+SRC_C += $(PICORTOS_DIR)/drivers/twi/twi-pic32mx.c
 SRC_C += $(PICORTOS_DIR)/drivers/uart/uart-pic32mx.c
 SRC_C += $(PICORTOS_DIR)/drivers/wd/wd-pic32mx.c
 
