--- a/demo/curiosity-2.0-pic32mz-ef/curiosity-2.0-pic32mz-ef.X/nbproject/private/SuppressibleMessageMemo.properties
+++ b/demo/curiosity-2.0-pic32mz-ef/curiosity-2.0-pic32mz-ef.X/nbproject/private/SuppressibleMessageMemo.properties
@@ -1,5 +1,5 @@
 #
-#Fri Feb 24 20:45:14 CET 2023
+#Sun Mar 26 15:17:45 CEST 2023
 pk4hybrid/CHECK_4_HIGH_VOLTAGE_VPP=false
 realice/CAL_WARNING=false
 pk4hybrid/DEVID_MISMATCH=false
@@ -24,8 +24,8 @@ mdbDebugger/SOFTWARE_BREAK_POINT_PREFERENCE=false
 pkoblicdbgr/DEVID_MISMATCH=false
 icd4/DEVID_MISMATCH=false
 icd3/CHECK_CLOCK=false
-icd3/DEVID_MISMATCH=false
 pk4hybrid/SIMULTANEOUS_DEBUG_WARNING=false
+icd3/DEVID_MISMATCH=false
 pkoblicdbgr/CHECK_4_HIGH_VOLTAGE_VPP=false
 icd4/MCLR_HOLD_RESET_NO_MAINTAIN_POWER=false
 icd3/CAL_WARNING=false
