--- a/devices/raspberry/rp2040/Makefile.in
+++ b/devices/raspberry/rp2040/Makefile.in
@@ -1,6 +1,6 @@
-# Device configuration file for ATMega2560
+# Device configuration file for RPi Pico / RP2040
 ARCH_DIR := $(PICORTOS_DIR)/arch/arm/cm0+
-DEVICE_DIR := $(PICORTOS_DIR)/devices/raspberry/rp2040
+DEVICE_DIR := $(dir $(realpath $(lastword $(MAKEFILE_LIST))))
 
 DEFINE := -D__RP2040__
 
@@ -10,4 +10,8 @@ INCLUDE += -I$(DEVICE_DIR) -I$(ARCH_DIR)
 SRC_C := $(PICORTOS_DIR)/picoRTOS.c
 SRC_C += $(ARCH_DIR)/picoRTOS_port.c
 
-SRC_S := $(ARCH_DIR)/picoRTOS_portasm.S
+SRC_S := $(DEVICE_DIR)/startup.S
+SRC_S += $(ARCH_DIR)/picoRTOS_portasm.S
+
+LDRAM := $(DEVICE_DIR)/gcc/rp2040_ram.ld
+LDFLASH := $(DEVICE_DIR)/gcc/rp2040_rom.ld
