demo: raspberry-pico & raspberry-pico-SMP makefiles

--- a/demo/raspberry-pico/Makefile
+++ b/demo/raspberry-pico/Makefile
@@ -1,9 +1,18 @@
-# splint test
+ELF_RAM := raspberry-pico_ram.elf
+ELF_FLASH := raspberry-pico_flash.elf
+
+CC := gcc
+CROSS := arm-none-eabi-
+BUILD := build
+
 # picoRTOS
 PICORTOS_DIR := $(abspath ../..)
 -include $(PICORTOS_DIR)/devices/raspberry/rp2040/Makefile.in
 
 SPLINTFLAGS := -checks +unixlib
+
+CFLAGS += -Wall -Wextra -std=c99 $(INCLUDE) -O0 -g3 $(DEFINE) -mcpu=cortex-m0plus
+SFLAGS += -x assembler-with-cpp -g3 $(DEFINE) $(INCLUDE) -mcpu=cortex-m0plus
 
 INCLUDE += -I.
 
@@ -39,7 +48,32 @@ SRC_C += $(PICORTOS_DIR)/ipc/picoRTOS_cond.c
 SRC_C += main.c
 SRC_C += raspberry-pico.c
 
+OBJ := $(SRC_C:%.c=$(BUILD)/%.o)
+OBJ += $(SRC_S:%.S=$(BUILD)/%.o)
+
+all: $(ELF_RAM) $(ELF_FLASH)
+
+$(ELF_RAM): $(OBJ)
+	-mkdir -p $(@D)
+	$(CROSS)$(CC) $^ -T$(LDRAM) $(LDFLAGS) -o $@
+
+$(ELF_FLASH): $(OBJ)
+	-mkdir -p $(@D)
+	$(CROSS)$(CC) $^ -T$(LDFLASH) $(LDFLAGS) -o $@
+
+$(BUILD)/%.o: %.c
+	-mkdir -p $(@D)
+	$(CROSS)$(CC) $(CFLAGS) -c $< -o $@
+
+$(BUILD)/%.o: %.S
+	-mkdir -p $(@D)
+	$(CROSS)$(CC) $(SFLAGS) -c $< -o $@
+
 splint:
 	splint $(SPLINTFLAGS) $(DEFINE) $(INCLUDE) $(SRC_C)
+
+clean:
+	-rm -fR $(BUILD)
+	-rm -f *.elf
 
 .PHONY: splint
