--- a/demo/adafruit-itsybitsy-m4/adafruit-itsybitsy-m4.X/nbproject/Makefile-genesis.properties
+++ b/demo/adafruit-itsybitsy-m4/adafruit-itsybitsy-m4.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Wed Mar 22 16:43:08 CET 2023
+#Mon Apr 03 18:17:25 CEST 2023
 default.languagetoolchain.version=10.2.1
 default.com-microchip-mplab-nbide-toolchain-arm-ARMLanguageToolchain.md5=ac2ecfade21354c0103b0a98d2af6ca6
 default.Pack.dfplocation=/home/jnaulet/.mchp_packs/Microchip/SAMD51_DFP/3.6.120
+default.com-microchip-mplab-mdbcore-AtmelIceScripting-AtmelIceScriptingBase.md5=08c658d7de75da11bc13fd254c7a7ad8
 conf.ids=default
 default.languagetoolchain.dir=/opt/gcc-arm-none-eabi-10-2020-q4-major/bin
 host.id=244g-ildn-ch
-default.platformTool.md5=null
-configurations-xml=8a4fc8f4030cfb4872033169fd607f13
+configurations-xml=5f80a3de2fa22100b929a9bc933b6b8e
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=5ac7a99e4b1de1ea64248c04a43532ad
 proj.dir=/home/jnaulet/Documents/dev/OpenPicoRTOS-dev/demo/adafruit-itsybitsy-m4/adafruit-itsybitsy-m4.X
 host.platform=linux
