--- a/devices/microchip/pic32mz-ef/Makefile.in
+++ b/devices/microchip/pic32mz-ef/Makefile.in
@@ -10,4 +10,5 @@ INCLUDE += -I$(DEVICE_DIR) -I$(ARCH_DIR)
 SRC_C := $(PICORTOS_DIR)/picoRTOS.c
 SRC_C += $(ARCH_DIR)/picoRTOS_port.c
 
-SRC_S := $(ARCH_DIR)/picoRTOS_portasm.S
+SRC_S := $(DEVICE_DIR)/startup.S
+SRC_S += $(ARCH_DIR)/picoRTOS_portasm.S
