demo: updated curiosity-2.9-pic32mz-ef

--- a/demo/attiny1607-cnano/attiny1607-cnano.X/nbproject/Makefile-genesis.properties
+++ b/demo/attiny1607-cnano/attiny1607-cnano.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Thu Mar 02 15:36:31 CET 2023
+#Sat Apr 15 12:13:07 CEST 2023
 default.languagetoolchain.version=2.41
 default.Pack.dfplocation=/opt/microchip/mplabx/v6.05/packs/Microchip/ATtiny_DFP/3.0.151
-default.com-microchip-mplab-mdbcore-AtmelIceScripting-AtmelIceScriptingBase.md5=08c658d7de75da11bc13fd254c7a7ad8
 conf.ids=default
 default.languagetoolchain.dir=/opt/microchip/xc8/v2.41/bin
 host.id=244g-ildn-ch
-configurations-xml=210d87d1794a2830536e195587bed297
+configurations-xml=58c7abd9c208b5aace01542cab65f1e4
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=5ac7a99e4b1de1ea64248c04a43532ad
+default.com-micrcohip-mplab-mdbcore-pkob4-PKOB4ToolImpl.md5=dd22c4b79ea45fd5e4e74f71c232a17a
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=0e8fad895b9b8299a6c08191595e8207
-proj.dir=/home/jnaulet/Documents/dev/OpenPicoRTOS/demo/attiny1607-cnano/attiny1607-cnano.X
+proj.dir=/home/jnaulet/Documents/dev/OpenPicoRTOS-dev/demo/attiny1607-cnano/attiny1607-cnano.X
 host.platform=linux
