--- a/devices/atmel/atsam3x8e/Makefile.in
+++ b/devices/atmel/atsam3x8e/Makefile.in
@@ -1,6 +1,6 @@
-# Device configuration file for ATSAM3X8E
+# Device configuration file for ATSAM3X series
 ARCH_DIR := $(PICORTOS_DIR)/arch/arm/cm3
-DEVICE_DIR := $(PICORTOS_DIR)/devices/atmel/atsam3x8e
+DEVICE_DIR := $(dir $(realpath $(lastword $(MAKEFILE_LIST))))
 
 DEFINE := -DATSAM3X8E
 
@@ -10,4 +10,5 @@ INCLUDE += -I$(DEVICE_DIR) -I$(ARCH_DIR)
 SRC_C := $(PICORTOS_DIR)/picoRTOS.c
 SRC_C += $(ARCH_DIR)/picoRTOS_port.c
 
-SRC_S := $(ARCH_DIR)/picoRTOS_portasm.S
+SRC_S := $(DEVICE_DIR)/startup.S
+SRC_S += $(ARCH_DIR)/picoRTOS_portasm.S
