backports: raspberry-pico device from v1.8.x

--- a/devices/raspberry/rp2040/Makefile.in
+++ b/devices/raspberry/rp2040/Makefile.in
@@ -1,4 +1,4 @@
-# Device configuration file for ATMega2560
+# Device configuration file for RPi Pico / RP2040
 ARCH_DIR := $(PICORTOS_DIR)/arch/arm/cm0+
 DEVICE_DIR := $(PICORTOS_DIR)/devices/raspberry/rp2040
 
