demo: cppcheck target on adafruit-itsybitsy-m4

--- a/demo/adafruit-itsybitsy-m4/Makefile
+++ b/demo/adafruit-itsybitsy-m4/Makefile
@@ -13,6 +13,10 @@ PICORTOS_DIR := $(abspath ../..)
 
 INCLUDE += -I.
 SPLINTFLAGS += -checks +unixlib
+CPPCHECKFLAGS += --enable=all --inline-suppr -DNDEBUG
+CPPCHECKFLAGS += --suppress=missingIncludeSystem
+CPPCHECKFLAGS += --suppress=unusedFunction
+CPPCHECKFLAGS += --suppress=unusedStructMember
 
 CFLAGS += -Wall -Wextra -std=c99 $(INCLUDE) -O0 -g3 $(DEFINE)
 CFLAGS += -mcpu=cortex-m4 -mthumb -mfpu=fpv4-sp-d16
@@ -77,6 +81,9 @@ upload:
 
 splint:
 	splint $(SPLINTFLAGS) $(DEFINE) $(INCLUDE) $(SRC_C)
+
+cppcheck:
+	cppcheck $(CPPCHECKFLAGS) $(DEFINE) $(INCLUDE) $(SRC_C)
 
 clean:
 	-rm -rf $(BUILD)
