demo: attiny1607-cano cppcheck pass

--- a/demo/attiny1607-cnano/Makefile
+++ b/demo/attiny1607-cnano/Makefile
@@ -4,6 +4,9 @@ PICORTOS_DIR := $(abspath ../..)
 
 # static anaylyzer
 SPLINTFLAGS := -D__ATtiny1607__ -checks +unixlib
+CPPCHECKFLAGS += --enable=all --inline-suppr -DNDEBUG
+CPPCHECKFLAGS += --suppress=missingIncludeSystem
+CPPCHECKFLAGS += --suppress=unusedFunction
 
 INCLUDE += -I.
 
@@ -34,5 +37,8 @@ SRC_C += main.c
 
 splint:
 	splint $(SPLINTFLAGS) $(DEFINE) $(INCLUDE) $(SRC_C)
+
+cppcheck:
+	cppcheck $(CPPCHECKFLAGS) $(DEFINE) $(INCLUDE) $(SRC_C)
 
 .PHONY: splint
